# rag_project

./: README.md  examples.sh  main.py  pyproject.toml  test_api.py
src/: __init__.py  chat_engine.py  cleanup_service.py  config.py  database.py  document_processor.py  models.py  ollama_client.py  schemas.py  text_chunker.py  utils.py  vector_store.py
src/routes/: chat.py  documents.py
